# HighPerformanceAsyncMessagingServer

./: .gitignore  CMakeLists.txt
docs/: ARCHITECTURE.md  BUILD.md  PERFORMANCE.md  PROJECT_SUMMARY.md  README.md  USAGE_GUIDE.md
include/: AsyncServer.h  AsyncSocket.h  BinaryProtocol.h  BitPackUtils.h  BufferWrapper.h  ConnectionHandler.h  ConnectionManager.h  EndianUtils.h  HandlerRegistry.h  LockFreeQueue.h  LogGuard.h  MessageHandler.h  MessageSerializer.h  MutexQueue.h  NetworkBuffer.h  ProtocolMessages.h  ResourcePool.h  RuleOfFiveDemo.h  SocketWrapper.h  ThreadPool.h
src/: AsyncServer.cpp  AsyncSocket.cpp  BinaryProtocol.cpp  BitPackUtils.cpp  ConnectionHandler.cpp  ConnectionManager.cpp  HandlerRegistry.cpp  MessageSerializer.cpp  QueueBenchmark.cpp  ThreadPool.cpp  main.cpp
test/: AsyncNetworkingTest.cpp  BufferWrapperTest.cpp  CMakeLists.txt  LogGuardTest.cpp  ProtocolTest.cpp  QueueTest.cpp  RAIITest.cpp  ResourcePoolTest.cpp  SocketWrapperTest.cpp  ThreadPoolTest.cpp
